--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -48,14 +48,13 @@ jobs:
   code-standard-check: 
     runs-on: ubuntu-latest
     environment: dev
-    needs: [setup-env-job]      
     steps:
       - name: Check code standards
         run: |
           echo "Run Pylint"
 
   flow-evaluation:
-    needs: [setup-env-job, unit-testing, code-standard-check]
+    needs: [unit-testing, code-standard-check]
     runs-on: ubuntu-latest
     environment: dev
     steps:
@@ -128,7 +127,7 @@ jobs:
 
   build-image:
     runs-on: ubuntu-latest
-    needs: [setup-env-job, unit-testing, code-standard-check, flow-evaluation]    
+    needs: [unit-testing, code-standard-check, flow-evaluation]    
     environment: dev 
     steps:
       - uses: actions/checkout@v4      
